# cy-celcat

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
fetch/: Cargo.toml
fetch/src/: main.rs
src/: entities.rs  fetch.rs  lib.rs
src/fetchable/: calendar.rs  event.rs  mod.rs  resources.rs
