[package]
name = "cy-celcat"
description = "Safe wrapper around CY Cergy Paris Univertity’s Celcat API"
keywords = ["celcat", "timetabler", "api"]
categories = ["api-bindings"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/luc65r/cy-celcat"
license = "MIT"
authors = ["Lucas Ransan <lucas@ransan.tk>"]

[dependencies]
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "celcat"
