[package]
name = "cy-celcat"
description = "Safe wrapper around CY Cergy Paris Univertity’s Celcat API"
keywords = ["celcat", "timetabler", "api"]
categories = ["api-bindings"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/luc65r/cy-celcat"
license = "MIT"
authors = ["Lucas Ransan <lucas@ransan.tk>"]
include = ["/src/**/*", "/Cargo.toml", "/README.md", "/LICENSE"]

[lib]
name = "celcat"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }

lazy_static = { version = "1", optional = true }
log = { version = "0.4", optional = true }
regex = { version = "1.5", optional = true }
reqwest = { version = "0.11", features = ["json", "cookies"], optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["fetch"]
fetch = ["lazy_static", "log", "regex", "reqwest", "thiserror"]

[workspace]
members = ["fetch"]
default-members = [".", "fetch"]
