[package]
name = "cy-celcat-fetch"
description = "Safe wrapper around CY Cergy Paris Univertity’s Celcat API"
keywords = ["celcat", "timetabler"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luc65r/cy-celcat"
license = "MIT"
authors = ["Lucas Ransan <lucas@ransan.tk>"]
include = ["src/**/*", "Cargo.toml", "LICENSE"]

[[bin]]
name = "celcat-fetch"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "~3.0.0-beta.5"
cy-celcat = { path = "../" }
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
